--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-maps": "^1.15.6",
     "react-native-reanimated": "^3.13.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
