--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.15.6",
     "react-native-reanimated": "^3.13.0",
     "react-native-safe-area-context": "^4.10.7",
