--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "react-native-reanimated": "^3.13.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
-    "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.2"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
